Fixed Bloc Page max-width on mobile

--- a/styles/mobile.css
+++ b/styles/mobile.css
@@ -3,7 +3,7 @@
     #bloc_page {
         margin: auto;
         font-family: 'Raleway', sans-serif;
-        max-width: 576px;
+        max-width: 650px;
     }
 
     .top_section {
